--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,14 @@
 */
 
 @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400&family=Montserrat:wght@200;400;600;800&display=swap");
-
-html,
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+html{
+  scroll-behavior: smooth;
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
+  overflow-x: hidden;
+  padding: 0;
+}
 body {
   font-family: "Montserrat", sans-serif;
   height: 100%;
@@ -12,8 +18,12 @@ body {
   overflow-x: hidden;
   padding: 0;
   width: 100%;
+  background-color: #03001C;
+  color: #B6EADA;
 }
-
+.project-name{
+  color: #B6EADA;
+}
 div#main {
   display: flex;
   flex-direction: column;
@@ -49,10 +59,33 @@ h1 {
   font-family: "Cormorant Garamond", serif;
   font-size: 7rem;
   font-weight: 400;
-  line-height: 0.8;
+  line-height: 1;
   margin: 0;
 }
-
+.header-div{
+  height:100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.header-div div{
+  margin-inline:2rem;
+}
+.header-name{
+  font-family: 'Lato', sans-serif;
+  font-size: 7rem;
+  font-weight: bold;
+  margin-block: 2rem;
+}
+.header-image{
+  width:auto;
+  height:auto;
+}
+.header-div h2{
+  font-size: 3rem;
+  font-weight: 600;
+}
 h2 {
   font-size: 2rem;
   font-weight: 400;
@@ -83,6 +116,24 @@ p.small {
 
 hr {
   margin: 2.5rem;
+}
+
+.project-wrapper{
+  display: flex;
+  flex-direction: row;
+  padding-top: 3rem;
+}
+
+.project-image{
+  max-width: 40%;
+  align-self: center;
+}
+.skills{
+  text-align: "left";
+  columns: 2;
+  font-size: "1.25rem";
+  margin: "2rem 3rem";
+  gap: "3rem";
 }
 
 li {
@@ -122,4 +173,178 @@ a:hover {
 img.socialIcon {
   height: 30px;
   width: 30px;
+}
+
+.navbar {
+  background-color: #301E67;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 20;
+}
+.navbar .nav-container .name *{
+  color: #B6EADA;
+  font-size: 2.5rem;
+}
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 80px;
+  padding: 3rem 1rem;
+}
+.nav-container img{
+  width: 5rem;
+  height: 5rem;
+  margin-inline: 3rem;
+  cursor: pointer;
+}
+.nav-menu {
+  display: flex;
+  gap: 5rem;
+  list-style: none;
+  text-align: center;
+  margin-right: 2rem;
+}
+
+.nav-item {
+  line-height: 40px;
+  margin-right: 1rem;
+  cursor: pointer;
+}
+.nav-item *{
+  text-decoration: none;
+  color: #B6EADA;
+}
+.nav-item *:hover, .nav-item *:active{
+  color: #5B8FB9;
+}
+.nav-item:after {
+  content: "";
+  display: block;
+  height: 3px;
+  width: 0;
+  background: transparent;
+  transition: all 0.2s ease-in-out;
+}
+
+.nav-item:hover:after {
+  width: 100%;
+  background: #5B8FB9;
+}
+
+.nav-icon {
+  display: none;
+}
+
+@media screen and (max-width: 960px) {
+  .nav-menu {
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+    position: absolute;
+    top: 80px;
+    left: -110%;
+    opacity: 1;
+    transition: all 0.5s ease;
+  }
+
+  .nav-menu.active {
+    background: #5B8FB9;
+    left: 0px;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+  }
+
+  .nav-icon {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-100%, 60%) scale(1.5);
+    cursor: pointer;
+    color: #B6EADA;
+  }
+}
+
+@media screen and (max-width:1280px)
+{
+  .header-name{
+    font-size: 5rem;
+  }
+  .header-div h2{
+    font-size: 2.5rem;
+  }
+}
+
+@media screen and (max-width:1125px)
+{
+  .project-wrapper{
+    flex-direction: column;
+  }
+  .project-image{
+    min-width: 100%;
+  }
+}
+
+@media screen and (max-width:1000px)
+{
+  .header-image{
+    width: 40%;
+    height:40%;
+  }
+}
+@media screen and (max-width:880px)
+{
+  .skills{
+    columns:1;
+  }
+}
+@media screen and (max-width:680px)
+{
+  .container{
+    grid-template-columns:1fr;
+  }
+}
+@media screen and (max-width:650px)
+{
+  .header-div{
+    flex-direction: column;
+    justify-content: center;
+  }
+  .header-image{
+    width: 100%;
+  }
+}
+@media screen and (max-width:495px)
+{
+  .header-div div{
+    width: 100%;
+  }
+}
+@media screen and (max-width:430px)
+{
+  .header-name{
+    font-size: 4rem;
+  }
+}
+@media screen and (max-width:345px)
+{
+  .header-name{
+    font-size: 3.5rem;
+  }
+}
+@media screen and (max-width:320px)
+{
+  .header-div h2{
+    font-size: 2rem;
+  }
 }
