--- a/src/styles.css
+++ b/src/styles.css
@@ -247,6 +247,15 @@ img.socialIcon {
   outline:none
 }
 
+@keyframes slideIn {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
 @media screen and (max-width: 960px) {
   .nav-menu {
     flex-direction: column;
